crates/mun_codegen/src/snapshots/test__if_statement_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn foo(a:int):int {\n    let b = if a > 3 {\n        let c = if a > 4 {\n            a+1\n        } else {\n            a+3\n        }\n        c\n    } else {\n        a-1\n    }\n    b\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

